tests/negative/typecheck/arg_named_too_many.orng
// arg_named_too_many.orng:6:19: error: function does not accept parameter `y`
//     f(.x = 4, .y = 4)
//                  ^
// 
fn main() -> Int {
    f(.x = 4, .y = 4)
}

fn f(x: Int) -> Int {
    x
}